Better default config